--- a/presentation.html
+++ b/presentation.html
@@ -10,16 +10,16 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "presentation.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.scrolleffects.js", "presentation.css"], "outOfDate":[]};
 </script>
   
   <title>Presentation</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?crc=255582636"/>
-  <link rel="stylesheet" type="text/css" href="css/presentation.css?crc=4255735726" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?crc=372727448"/>
+  <link rel="stylesheet" type="text/css" href="css/presentation.css?crc=4004166110" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/bJDZZN2xsjnsdhIZxR1KTawYIverQPvs_dTKxSeyg1JfenIgfVP6DbwPH2SuFQSkwDZLweFcF2FqFQM3Z2StZ26DFQq3jRqDwRs8FDicFRF8FAJ-wKG0-cBopWmudcm7SfoRdhXC-cBopWmudcm7SfoRdhXCiaiaOcTypW8uiAo8-1M0jhNlJyTTiewljWZyd1blZhBkZe9lZhNX-e8ROWgkdkJOZc8CShN0OWFzZ1b7f6KDC3JbMg6YJMJ7f6RWtMIbMs6PJM4HgIuuShAbM-RMrl3B.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/_T913sfOqPJFB4CBJ11fcUNWStC_Jy4dG0QjxdRw_zIfenSgfVP6DbwPH2SuFQSkwDZLjQiqjhbXZAmq5A935AZR52mqFe93wD4yjQgRZewuwRM-5fG0-1m0ZAT3OciTieyujKoTdkU7iAo8-1M0Zh8X-YmKOc8zOYiaiko7iAo8-1M0Zh8X-YmKOc8zJ6lc-AUDdhtlShNcifJ--WsROABhjAoXOAiyScs8OAizieyTjku3Scv7f6RWtMIbMg6PJMJ7f6KDC3JbMs6YJM4HgIuuShAbMZzRxN3B.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -32,18 +32,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu1335"><!-- column -->
-    <div class="shadow clearfix colelem" id="u1335"><!-- group -->
-     <div class="gradient clearfix grpelem" id="u1332"><!-- column -->
-      <div class="position_content" id="u1332_position_content">
-       <a class="nonblock nontext clearfix colelem" id="u1329-4" href="index.html"><!-- content --><p>JuneJP.</p></a>
+   <div class="clearfix grpelem" id="pu6977"><!-- column -->
+    <div class="clearfix colelem" id="u6977"><!-- group -->
+     <div class="shadow clearfix grpelem" id="u1335"><!-- group -->
+      <div class="gradient clearfix grpelem" id="u1332"><!-- column -->
+       <a class="nonblock nontext transition clearfix colelem" id="u1329-4" href="index.html"><!-- content --><p>JuneJP.</p></a>
        <div class="clearfix colelem" id="u1339-4"><!-- content -->
         <p>Presentation</p>
        </div>
        <div class="clearfix colelem" id="pbuttonu2401"><!-- group -->
         <a class="nonblock nontext Button clearfix grpelem" id="buttonu2401" href="video.html"><!-- container box --><div class="clearfix grpelem" id="u2402-4"><!-- content --><p>VIDEO</p></div></a>
         <a class="nonblock nontext Button clearfix grpelem" id="buttonu2403" href="graphic-design.html"><!-- container box --><div class="clearfix grpelem" id="u2404-4"><!-- content --><p>GRAPHIC DESIGN</p></div></a>
-        <a class="nonblock nontext Button ButtonSelected clearfix grpelem" id="buttonu2405" href="presentation.html"><!-- container box --><div class="clearfix grpelem" id="u2406-4"><!-- content --><p>PRESENTATION</p></div></a>
+        <div class="Button clearfix grpelem" id="buttonu2405"><!-- container box -->
+         <div class="clearfix grpelem" id="u2406-4"><!-- content -->
+          <p>PRESENTATION</p>
+         </div>
+        </div>
         <a class="nonblock nontext Button clearfix grpelem" id="buttonu2407" href="identity.html"><!-- container box --><div class="clearfix grpelem" id="u2408-4"><!-- content --><p>IDENTITY</p></div></a>
        </div>
       </div>
@@ -91,7 +95,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="3220" data-content-above-spacer="3256" data-content-below-spacer="528"></div>
+   <div class="clearfix mse_pre_init" id="u7016"><!-- group -->
+    <div class="shadow clearfix grpelem" id="u7019"><!-- group -->
+     <div class="gradient clearfix grpelem" id="u7020"><!-- group -->
+      <a class="nonblock nontext Button clearfix grpelem" id="buttonu7025" href="graphic-design.html"><!-- container box --><div class="clearfix grpelem" id="u7026-4"><!-- content --><p>GRAPHIC DESIGN</p></div></a>
+      <div class="clearfix grpelem" id="pbuttonu7023"><!-- group -->
+       <a class="nonblock nontext Button clearfix grpelem" id="buttonu7023" href="video.html"><!-- container box --><div class="clearfix grpelem" id="u7024-4"><!-- content --><p>VIDEO</p></div></a>
+       <div class="Button clearfix grpelem" id="buttonu7017"><!-- container box -->
+        <div class="clearfix grpelem" id="u7018-4"><!-- content -->
+         <p>PRESENTATION</p>
+        </div>
+       </div>
+      </div>
+      <a class="nonblock nontext Button clearfix grpelem" id="buttonu7021" href="identity.html"><!-- container box --><div class="clearfix grpelem" id="u7022-4"><!-- content --><p>IDENTITY</p></div></a>
+     </div>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="3220" data-content-above-spacer="3256" data-content-below-spacer="534"></div>
    <div class="clearfix grpelem" id="u3977"><!-- group -->
     <div class="clearfix grpelem" id="u3980-7"><!-- content -->
      <p id="u3980-2">LET’S BUILD SOMETHING</p>
@@ -135,12 +155,13 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
+$('#u7016').registerPositionScrollEffect([{"speed":[0,-30],"in":[-Infinity,518.95]},{"speed":[0,0],"in":[518.95,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
