update resotution photos

--- a/phone/index.html
+++ b/phone/index.html
@@ -19,9 +19,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_aa-master.css?crc=127213821"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4095276987" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=71910042" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/7gCFanfXUaVqR4_WXwyxL-zw-bS-gxxdxNmnZ6uzhLMfe7CgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJ--WsROABhjAoXOAiyScs8OAizieyTjku3Scv7f6KDC3JbMg6YJMJ7f6KuC3JbMg6BJM4HgIuuShAbM-EpN0GB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/FKpmtfAuys-6C8Ry8bkkFKKNlJcoItj3D1AV7qITDtSfe7CgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJ--WsROABhjAoXOAiyScs8OAizieyTjku3Scv7f6KDC3JbMg6YJMJ7f6KuC3JbMg6BJM4HgIuuShAbMLPdrrGB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -125,7 +125,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u12771').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,0]},{"speed":[0,1],"in":[0,Infinity]}]);/* scroll effect */
+$('#u12771').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,1]},{"in":[0,Infinity],"speed":[0,1]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
