--- a/phone/uxui.html
+++ b/phone/uxui.html
@@ -18,10 +18,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>UX/UI</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_f-master.css?crc=4007149232"/>
-  <link rel="stylesheet" type="text/css" href="css/uxui.css?crc=4066368629" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_f-master.css?crc=4093009601"/>
+  <link rel="stylesheet" type="text/css" href="css/uxui.css?crc=3879119338" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/v5A5Uq24hcwkgg6c9Bs-MrPat7lnxnFuQGh4rDDsEuJfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMeh1zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/0kTyRezWqGeTe0umgW7Ulk8BouI_79Pjjar9fR2A08XfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMYEcxz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -55,11 +55,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u12275"><!-- group -->
      <div class="shadow clearfix grpelem" id="u12277"><!-- column -->
-      <div class="clip_frame colelem" id="u12322"><!-- image -->
-       <img class="block" id="u12322_img" src="../images/mobile%20application_1271x169.jpg?crc=258108157" alt="" width="270" height="169"/>
+      <div class="clip_frame colelem" id="u12976"><!-- image -->
+       <img class="block" id="u12976_img" src="../images/artboard%201%402x271x169.png?crc=3872714673" alt="" width="270" height="169"/>
       </div>
-      <div class="clip_frame colelem" id="u12324"><!-- image -->
-       <img class="block" id="u12324_img" src="../images/mobile%20application_2271x169.jpg?crc=4182727032" alt="" width="270" height="169"/>
+      <div class="clip_frame colelem" id="u12986"><!-- image -->
+       <img class="block" id="u12986_img" src="../images/artboard%203%402x271x169.png?crc=356232064" alt="" width="270" height="169"/>
       </div>
      </div>
     </div>
@@ -72,8 +72,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u12353"><!-- group -->
      <div class="shadow clearfix grpelem" id="u12356"><!-- group -->
-      <div class="clip_frame grpelem" id="u12359"><!-- image -->
-       <img class="block" id="u12359_img" src="../images/data%20visualization273x365.jpg?crc=68513599" alt="" width="273" height="364"/>
+      <div class="clip_frame grpelem" id="u12981"><!-- image -->
+       <img class="block" id="u12981_img" src="../images/artboard%202%402x273x365.png?crc=4051230374" alt="" width="273" height="364"/>
       </div>
      </div>
     </div>
@@ -82,8 +82,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u12408"><!-- group -->
      <div class="shadow clearfix grpelem" id="u12409"><!-- group -->
-      <div class="clip_frame grpelem" id="u12437"><!-- image -->
-       <img class="block" id="u12437_img" src="../images/web%20design270x432.jpg?crc=3906518181" alt="" width="269" height="432"/>
+      <div class="clip_frame grpelem" id="u12988"><!-- image -->
+       <img class="block" id="u12988_img" src="../images/artboard%204%402x270x433.png?crc=331905264" alt="" width="270" height="432"/>
       </div>
      </div>
     </div>
@@ -133,7 +133,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u12563').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,-899.75]},{"speed":[0,1],"in":[-899.75,Infinity]}]);/* scroll effect */
+$('#u12563').registerPositionScrollEffect([{"in":[-Infinity,-899.75],"speed":[0,1]},{"in":[-899.75,Infinity],"speed":[0,1]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
