--- a/phone/video.html
+++ b/phone/video.html
@@ -18,10 +18,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Video</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?crc=336094862"/>
-  <link rel="stylesheet" type="text/css" href="css/video.css?crc=4019517085" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?crc=153487103"/>
+  <link rel="stylesheet" type="text/css" href="css/video.css?crc=3965998013" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/NcZlV6WjRszmqmaHUGMQ_dMXSefNeq0sFzKYrpC-QJGfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMeU1zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/3lZ7jn9sF24YL9IOvcKSnHhgtBTbeqM56j6Lnic4DnJfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMYacxz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -243,7 +243,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u12503').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,0]},{"speed":[0,1],"in":[0,Infinity]}]);/* scroll effect */
+$('#u12503').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,1]},{"in":[0,Infinity],"speed":[0,1]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
