--- a/presentation.html
+++ b/presentation.html
@@ -22,10 +22,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Presentation</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?crc=250764760"/>
-  <link rel="stylesheet" type="text/css" href="css/presentation.css?crc=463985097" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?crc=432120734"/>
+  <link rel="stylesheet" type="text/css" href="css/presentation.css?crc=4236301921" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/MgChezdMWiOn_1ZHIR0ixydy1syC7ghMvppuc1KNnCSfen6gfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfP6sFiWF8qMYI1zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/UNZ2XC_AHJJm8ePZDKJy-u4Swe5IPXyHx-WxbnOcwLjfen6gfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfP6sFiWF8qMee1Vz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -171,7 +171,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u7585').registerPositionScrollEffect([{"speed":[0,-30],"in":[-Infinity,519]},{"speed":[0,0],"in":[519,Infinity]}]);/* scroll effect */
+$('#u7585').registerPositionScrollEffect([{"in":[-Infinity,519],"speed":[0,-30]},{"in":[519,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
