--- a/uxui.html
+++ b/uxui.html
@@ -22,10 +22,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>UX/UI</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_f-master.css?crc=3899025814"/>
-  <link rel="stylesheet" type="text/css" href="css/uxui.css?crc=3972150683" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_f-master.css?crc=172700904"/>
+  <link rel="stylesheet" type="text/css" href="css/uxui.css?crc=4155932958" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/N4bDdGNGvLuEwHQ7l9LQ8MvFrlCOgeqivm_VYN-T4iCfen6gfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfP6sFiWF8qMYY1zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/5-E_gUbCLmtgxLW7Ty3CBznBBX9EN4djlZ_codRRehCfen6gfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfP6sFiWF8qMe41Vz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -60,11 +60,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u9989"><!-- group -->
      <div class="shadow clearfix grpelem" id="u9992"><!-- column -->
-      <div class="clip_frame colelem" id="u10012"><!-- image -->
-       <img class="block" id="u10012_img" src="images/mobile%20application_1.jpg?crc=3786351397" alt="" width="998" height="624"/>
+      <div class="clip_frame colelem" id="u12899"><!-- image -->
+       <img class="block" id="u12899_img" src="images/artboard%201%402x.png?crc=392800047" alt="" width="999" height="624"/>
       </div>
-      <div class="clip_frame colelem" id="u10022"><!-- image -->
-       <img class="block" id="u10022_img" src="images/mobile%20application_2.jpg?crc=322794453" alt="" width="998" height="623"/>
+      <div class="clip_frame colelem" id="u12969"><!-- image -->
+       <img class="block" id="u12969_img" src="images/artboard%203%402x.png?crc=4001196231" alt="" width="999" height="624"/>
       </div>
      </div>
     </div>
@@ -79,8 +79,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u10047"><!-- group -->
      <div class="shadow clearfix grpelem" id="u10050"><!-- group -->
-      <div class="clip_frame grpelem" id="u10056"><!-- image -->
-       <img class="block" id="u10056_img" src="images/data%20visualization.jpg?crc=271917071" alt="" width="998" height="1332"/>
+      <div class="clip_frame grpelem" id="u12907"><!-- image -->
+       <img class="block" id="u12907_img" src="images/artboard%202%402x.png?crc=439279858" alt="" width="998" height="1332"/>
       </div>
      </div>
     </div>
@@ -92,8 +92,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="u10113"><!-- group -->
      <div class="shadow clearfix grpelem" id="u10116"><!-- group -->
-      <div class="clip_frame grpelem" id="u10126"><!-- image -->
-       <img class="block" id="u10126_img" src="images/web%20design.jpg?crc=288373520" alt="" width="998" height="1598"/>
+      <div class="clip_frame grpelem" id="u12923"><!-- image -->
+       <img class="block" id="u12923_img" src="images/artboard%204%402x.png?crc=4038312301" alt="" width="998" height="1598"/>
       </div>
      </div>
     </div>
@@ -161,7 +161,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u8855').registerPositionScrollEffect([{"speed":[0,-30],"in":[-Infinity,519]},{"speed":[0,0],"in":[519,Infinity]}]);/* scroll effect */
+$('#u8855').registerPositionScrollEffect([{"in":[-Infinity,519],"speed":[0,-30]},{"in":[519,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
