--- a/video.html
+++ b/video.html
@@ -22,10 +22,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Video</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?crc=4136334344"/>
-  <link rel="stylesheet" type="text/css" href="css/video.css?crc=3917154260" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?crc=3806277555"/>
+  <link rel="stylesheet" type="text/css" href="css/video.css?crc=20322945" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/LDD31ITuw89ryO7qwDFuy1Ewv-k5GCghI0bfNRUTbhwfen6gfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfP6sFiWF8qMY21zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/TSe42AOj9sJ5xixXH_2T8rsAaK1pWhEqADiXw-UvS7Sfen6gfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfP6sFiWF8qMeB1Vz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -280,7 +280,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u7486').registerPositionScrollEffect([{"speed":[0,-30],"in":[-Infinity,519]},{"speed":[0,0],"in":[519,Infinity]}]);/* scroll effect */
+$('#u7486').registerPositionScrollEffect([{"in":[-Infinity,519],"speed":[0,-30]},{"in":[519,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
