--- a/phone/graphic-design.html
+++ b/phone/graphic-design.html
@@ -18,10 +18,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Graphic Design</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=419573531"/>
-  <link rel="stylesheet" type="text/css" href="css/graphic-design.css?crc=158084334" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=70012778"/>
+  <link rel="stylesheet" type="text/css" href="css/graphic-design.css?crc=3909387469" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/dVJ_rHBnJRaUMhO4kd2qhdnIAe6cuAfP6zYzxpe2ynjfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMe31zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/L7R3PEcbno2Kr7h_pNpBRQcSdjLCFfjEcS-2X94UCFMfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMYhcxz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -192,7 +192,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u12480').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,3350]},{"speed":[0,1],"in":[3350,Infinity]}]);/* scroll effect */
+$('#u12480').registerPositionScrollEffect([{"in":[-Infinity,3350],"speed":[0,1]},{"in":[3350,Infinity],"speed":[0,1]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
