--- a/phone/identity.html
+++ b/phone/identity.html
@@ -18,10 +18,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Identity</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_e-master.css?crc=3931385168"/>
-  <link rel="stylesheet" type="text/css" href="css/identity.css?crc=251359027" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_e-master.css?crc=4151987489"/>
+  <link rel="stylesheet" type="text/css" href="css/identity.css?crc=50940492" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/utGTjKqDdyUMRAcloOm0phDbqwPl5P4k7sc5PcKeajjfeCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMeX1zd7gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/pInEcl_GmNRp5xCyyRBInKl8Z3mxFc3jL8605QDaa06feCbgfFpUDb9PHQIUFD9DFR6aWDJUZQqoF2JkFQSh5AFc52qhFewuZ2sKw2jDw2I3wAJaeR67OcTudcm7Sfo1-WsGiAJ0-AvC-1m0ZAT3OciTieyujKoTdkUaiaS0-1m0ZAT3OciTieyujKoTdkJOZc8CShN0OWFzZ1bKec8XjkuyicB0ifu1jW4qZPu1dasG-AwlSY4zH6GJurMgIMMjIKMfH6GJC_wfIMIjgkMfH6GJldwfIMIjgPMfP6sFiWF8qMYocxz7gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -175,7 +175,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u12546').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,0]},{"speed":[0,1],"in":[0,Infinity]}]);/* scroll effect */
+$('#u12546').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,1]},{"in":[0,Infinity],"speed":[0,1]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
