--- a/phone/index.html
+++ b/phone/index.html
@@ -44,8 +44,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u12591-4">UX/UI Designer</p>
       </div>
       <div class="pointer_cursor Button transition shadow rounded-corners clearfix colelem" id="buttonu12589"><!-- container box -->
-       <a class="block" href="../assets/cv_junejp2019.pdf"><!-- Block link tag --></a>
-       <a class="nonblock nontext clearfix grpelem" id="u12590-4" href="../assets/cv_junejp2019.pdf"><!-- content --><p>DOWNLOAD CV</p></a>
+       <a class="block" href="../assets/june-resume2023.pdf"><!-- Block link tag --></a>
+       <a class="nonblock nontext clearfix grpelem" id="u12590-4" href="../assets/june-resume2023.pdf"><!-- content --><p>DOWNLOAD CV</p></a>
       </div>
       <div class="clearfix colelem" id="pu12722"><!-- group -->
        <div class="clip_frame grpelem" id="u12722"><!-- image -->
